--- a/index.html
+++ b/index.html
@@ -163,11 +163,11 @@
         <!-- Catalog starts here -->   
 
 
-<!-- Microsoft Company -->
+
 
  
 
-<!-- Xbox Microsoft -->
+<!--Microsoft-->
 <li>
   <label>
    <a href="https://hv-leaf.github.io/Ch3at/pages/microsoft.html">
@@ -186,29 +186,14 @@
     <ul>
   </div>
 </li>
-<!-- End Microsoft Company -->
+<!--Microsoft-->
 
 
-<!-- Nintendo Company-->
-<li>
-  <label class="a-label__chevron" for="nintendo">
-    <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/backend/nintendo.png" height=32 width=128></label>
-  </label>
-  <input type="checkbox" id="nintendo" name="nintendo" class="m-menu__checkbox">
-  <div class="m-menu">
-    <div class="m-menu__header">
-      <label class="m-menu__toggle" for="nintendo">
-        <svg width="35" height="35" viewBox="0 0 24 24" fill="none" stroke="#000000" stroke-width="2" stroke-linecap="butt" stroke-linejoin="arcs"><path d="M19 12H6M12 5l-7 7 7 7"/></svg>
-      </label>
-      <span><img src="https://hv-leaf.github.io/Ch3at/ch3ticons/backend/nintendo.png" height=32 width=128></span>
-    </div>
-    <ul>
-
-<!-- NES -->
+<!--Nintendo-->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/nes.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/nintendo.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/backend/nintendo.png" height=32 width=128>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -217,176 +202,13 @@
     </a>
     </ul>
 </li>
-<!-- End NES -->
-
-<!-- Gameboy -->
-<li>
-  <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/gb/gb.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/gb/logo.png" height=32 width=128>
   <div class="m-menu">
     <div class="m-menu__header">
-  </label>
     </div>
     <ul>
-    </a>
-    </ul>
-</li>
-<!-- End Gameboy -->
-
-<!-- SNES -->
-<li>
-  <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/snes/snes.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/snes/logo.png" height=32 width=128>
-  <div class="m-menu">
-    <div class="m-menu__header">
-  </label>
-    </div>
-    <ul>
-    </a>
-    </ul>
-</li>
-<!-- End SNES -->
-
-<!-- N64 -->
-<li>
-  <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/n64/n64.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/n64/logo.png" height=64 width=64>
-  <div class="m-menu">
-    <div class="m-menu__header">
-  </label>
-    </div>
-    <ul>
-    </a>
-    </ul>
-</li>
-<!-- End N64 -->
-
-<!-- Gameboy Color -->
-<li>
-  <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/gbc/gbc.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/gbc/logo.png" height=32 width=128>
-  <div class="m-menu">
-    <div class="m-menu__header">
-  </label>
-    </div>
-    <ul>
-    </a>
-    </ul>
-</li>
-<!-- End Gameboy Color -->
-
-<!-- Gameboy Advance -->
-<li>
-  <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/gba/gba.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/gba/logo.png" height=32 width=128>
-  <div class="m-menu">
-    <div class="m-menu__header">
-  </label>
-    </div>
-    <ul>
-    </a>
-    </ul>
-</li>
-<!-- End Gameboy Advance -->
-
-<!-- GameCube -->
-<li>
-  <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/gamecube/gamecube.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/gamecube/logo.png" height=32 width=128>
-  <div class="m-menu">
-    <div class="m-menu__header">
-  </label>
-    </div>
-    <ul>
-    </a>
-    </ul>
-</li>
-<!-- End GameCube -->
-
-<!-- DS -->
-<li>
-  <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/ds/ds.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/ds/logo.png" height=32 width=128>
-  <div class="m-menu">
-    <div class="m-menu__header">
-  </label>
-    </div>
-    <ul>
-    </a>
-    </ul>
-</li>
-<!-- End DS -->
-
-<!-- Wii -->
-<li>
-  <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/wii/wii.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/wii/logo.png" height=32 width=80>
-  <div class="m-menu">
-    <div class="m-menu__header">
-  </label>
-    </div>
-    <ul>
-    </a>
-    </ul>
-</li>
-<!-- End Wii -->
-
-<!-- 3DS -->
-<li>
-  <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/3ds/3ds.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/3ds/logo.png" height=32 width=128>
-  <div class="m-menu">
-    <div class="m-menu__header">
-  </label>
-    </div>
-    <ul>
-    </a>
-    </ul>
-</li>
-<!-- End 3DS -->
-
-<!-- Wii U -->
-<li>
-  <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/wiiu/wiiu.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/wiiu/logo.png" height=32 width=128>
-  <div class="m-menu">
-    <div class="m-menu__header">
-  </label>
-    </div>
-    <ul>
-    </a>
-    </ul>
-</li>
-<!-- End Wii U -->
-
-<!-- Switch -->
-<li>
-  <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/switch/switch.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/switch/logo.png" height=32 width=128>
-  <div class="m-menu">
-    <div class="m-menu__header">
-  </label>
-    </div>
-    <ul>
-    </a>
-    </ul>
-</li>
-<!-- End Switch -->
-    <br></br><br></br></ul>
   </div>
 </li>
-<!-- End Nintendo Company -->
+<!--Nintendo-->
 
 <!-- Sega Company -->
 <li>
