--- a/pages/gb/gb.html
+++ b/pages/gb/gb.html
@@ -136,14 +136,14 @@
   </svg>
 </a>
 
-<span><img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128></span><button id="combinedButton">🌙</button> </div><ul>
+<span><img src="https://hv-leaf.github.io/Ch3at/ch3ticons/gb/logo.png" height=32 width=128></span><button id="combinedButton">🌙</button> </div><ul>
         <!-- Catalog starts here -->   
 
-<!-- nes # -->
+<!-- gb # -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/09.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(#)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/gb/09.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/gb/logo.png" height=32 width=128> <alph>(#)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -152,14 +152,14 @@
     </a>
     </ul>
 </li>
-<!-- End nes #-->
+<!-- End gb #-->
 
 
-<!-- nes a -->
+<!-- gb a -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/a.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(a)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/gb/a.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/gb/logo.png" height=32 width=128> <alph>(a)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -168,13 +168,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes a-->
+<!-- End gb a-->
 
-<!-- nes b -->
+<!-- gb b -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/b.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(b)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/gb/b.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/gb/logo.png" height=32 width=128> <alph>(b)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -183,13 +183,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes b-->
+<!-- End gb b-->
 
-<!-- nes c -->
+<!-- gb c -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/c.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(c)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/gb/c.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/gb/logo.png" height=32 width=128> <alph>(c)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -198,13 +198,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes c-->
+<!-- End gb c-->
 
-<!-- nes d -->
+<!-- gb d -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/d.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(d)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/gb/d.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/gb/logo.png" height=32 width=128> <alph>(d)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -213,12 +213,12 @@
     </a>
     </ul>
 </li>
-<!-- End nes d-->
-<!-- nes e -->
+<!-- End gb d-->
+<!-- gb e -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/e.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(e)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/gb/e.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/gb/logo.png" height=32 width=128> <alph>(e)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -227,13 +227,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes e-->
+<!-- End gb e-->
 
-<!-- nes f -->
+<!-- gb f -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/f.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(f)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/gb/f.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/gb/logo.png" height=32 width=128> <alph>(f)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -242,13 +242,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes f-->
+<!-- End gb f-->
 
-<!-- nes g -->
+<!-- gb g -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/g.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(g)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/gb/g.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/gb/logo.png" height=32 width=128> <alph>(g)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -257,13 +257,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes g-->
+<!-- End gb g-->
 
-<!-- nes h -->
+<!-- gb h -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/h.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(h)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/gb/h.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/gb/logo.png" height=32 width=128> <alph>(h)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -272,13 +272,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes h-->
+<!-- End gb h-->
 
-<!-- nes i -->
+<!-- gb i -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/i.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(i)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/gb/i.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/gb/logo.png" height=32 width=128> <alph>(i)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -287,13 +287,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes i-->
+<!-- End gb i-->
 
-<!-- nes j -->
+<!-- gb j -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/j.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(j)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/gb/j.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/gb/logo.png" height=32 width=128> <alph>(j)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -302,13 +302,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes j-->
+<!-- End gb j-->
 
-<!-- nes k -->
+<!-- gb k -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/k.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(k)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/gb/k.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/gb/logo.png" height=32 width=128> <alph>(k)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -317,13 +317,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes k-->
+<!-- End gb k-->
 
-<!-- nes l -->
+<!-- gb l -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/l.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(l)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/gb/l.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/gb/logo.png" height=32 width=128> <alph>(l)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -332,13 +332,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes l-->
+<!-- End gb l-->
 
-<!-- nes m -->
+<!-- gb m -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/m.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(m)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/gb/m.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/gb/logo.png" height=32 width=128> <alph>(m)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -347,13 +347,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes m-->
+<!-- End gb m-->
 
-<!-- nes n -->
+<!-- gb n -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/n.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(n)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/gb/n.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/gb/logo.png" height=32 width=128> <alph>(n)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -362,13 +362,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes n-->
+<!-- End gb n-->
 
-<!-- nes o -->
+<!-- gb o -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/o.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(o)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/gb/o.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/gb/logo.png" height=32 width=128> <alph>(o)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -377,13 +377,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes o-->
+<!-- End gb o-->
 
-<!-- nes p -->
+<!-- gb p -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/p.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(p)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/gb/p.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/gb/logo.png" height=32 width=128> <alph>(p)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -392,13 +392,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes p-->
+<!-- End gb p-->
 
-<!-- nes q -->
+<!-- gb q -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/q.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(q)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/gb/q.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/gb/logo.png" height=32 width=128> <alph>(q)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -407,13 +407,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes q-->
+<!-- End gb q-->
 
-<!-- nes r -->
+<!-- gb r -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/r.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(r)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/gb/r.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/gb/logo.png" height=32 width=128> <alph>(r)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -422,13 +422,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes r-->
+<!-- End gb r-->
 
-<!-- nes s -->
+<!-- gb s -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/s.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(s)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/gb/s.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/gb/logo.png" height=32 width=128> <alph>(s)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -437,13 +437,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes s-->
+<!-- End gb s-->
 
-<!-- nes t -->
+<!-- gb t -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/t.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(t)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/gb/t.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/gb/logo.png" height=32 width=128> <alph>(t)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -452,13 +452,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes t-->
+<!-- End gb t-->
 
-<!-- nes u -->
+<!-- gb u -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/u.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(u)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/gb/u.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/gb/logo.png" height=32 width=128> <alph>(u)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -467,13 +467,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes u-->
+<!-- End gb u-->
 
-<!-- nes v -->
+<!-- gb v -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/v.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(v)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/gb/v.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/gb/logo.png" height=32 width=128> <alph>(v)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -482,13 +482,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes v-->
+<!-- End gb v-->
 
-<!-- nes w -->
+<!-- gb w -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/w.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(w)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/gb/w.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/gb/logo.png" height=32 width=128> <alph>(w)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -497,13 +497,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes w-->
+<!-- End gb w-->
 
-<!-- nes x -->
+<!-- gb x -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/x.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(x)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/gb/x.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/gb/logo.png" height=32 width=128> <alph>(x)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -512,13 +512,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes x-->
+<!-- End gb x-->
 
-<!-- nes y -->
+<!-- gb y -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/y.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(y)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/gb/y.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/gb/logo.png" height=32 width=128> <alph>(y)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -527,13 +527,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes y-->
+<!-- End gb y-->
 
-<!-- nes z -->
+<!-- gb z -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/z.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(z)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/gb/z.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/gb/logo.png" height=32 width=128> <alph>(z)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -542,7 +542,7 @@
     </a>
     </ul>
 </li>
-<!-- End nes z-->
+<!-- End gb z-->
     
  <br></br><br></br></ul>
   </div>
