--- a/pages/n64/n64.html
+++ b/pages/n64/n64.html
@@ -136,14 +136,14 @@
   </svg>
 </a>
 
-<span><img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128></span><button id="combinedButton">🌙</button> </div><ul>
+<span><img src="https://hv-leaf.github.io/Ch3at/ch3ticons/n64/logo.png" height=64 width=64></span><button id="combinedButton">🌙</button> </div><ul>
         <!-- Catalog starts here -->   
 
-<!-- nes # -->
+<!-- n64 # -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/09.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(#)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/n64/09.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/n64/logo.png" height=64 width=64> <alph>(#)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -152,14 +152,14 @@
     </a>
     </ul>
 </li>
-<!-- End nes #-->
+<!-- End n64 #-->
 
 
-<!-- nes a -->
+<!-- n64 a -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/a.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(a)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/n64/a.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/n64/logo.png" height=64 width=64> <alph>(a)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -168,13 +168,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes a-->
+<!-- End n64 a-->
 
-<!-- nes b -->
+<!-- n64 b -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/b.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(b)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/n64/b.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/n64/logo.png" height=64 width=64> <alph>(b)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -183,13 +183,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes b-->
+<!-- End n64 b-->
 
-<!-- nes c -->
+<!-- n64 c -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/c.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(c)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/n64/c.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/n64/logo.png" height=64 width=64> <alph>(c)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -198,13 +198,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes c-->
+<!-- End n64 c-->
 
-<!-- nes d -->
+<!-- n64 d -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/d.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(d)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/n64/d.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/n64/logo.png" height=64 width=64> <alph>(d)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -213,12 +213,12 @@
     </a>
     </ul>
 </li>
-<!-- End nes d-->
-<!-- nes e -->
+<!-- End n64 d-->
+<!-- n64 e -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/e.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(e)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/n64/e.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/n64/logo.png" height=64 width=64> <alph>(e)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -227,13 +227,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes e-->
+<!-- End n64 e-->
 
-<!-- nes f -->
+<!-- n64 f -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/f.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(f)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/n64/f.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/n64/logo.png" height=64 width=64> <alph>(f)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -242,13 +242,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes f-->
+<!-- End n64 f-->
 
-<!-- nes g -->
+<!-- n64 g -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/g.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(g)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/n64/g.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/n64/logo.png" height=64 width=64> <alph>(g)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -257,13 +257,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes g-->
+<!-- End n64 g-->
 
-<!-- nes h -->
+<!-- n64 h -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/h.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(h)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/n64/h.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/n64/logo.png" height=64 width=64> <alph>(h)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -272,13 +272,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes h-->
+<!-- End n64 h-->
 
-<!-- nes i -->
+<!-- n64 i -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/i.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(i)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/n64/i.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/n64/logo.png" height=64 width=64> <alph>(i)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -287,13 +287,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes i-->
+<!-- End n64 i-->
 
-<!-- nes j -->
+<!-- n64 j -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/j.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(j)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/n64/j.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/n64/logo.png" height=64 width=64> <alph>(j)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -302,13 +302,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes j-->
+<!-- End n64 j-->
 
-<!-- nes k -->
+<!-- n64 k -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/k.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(k)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/n64/k.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/n64/logo.png" height=64 width=64> <alph>(k)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -317,13 +317,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes k-->
+<!-- End n64 k-->
 
-<!-- nes l -->
+<!-- n64 l -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/l.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(l)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/n64/l.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/n64/logo.png" height=64 width=64> <alph>(l)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -332,13 +332,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes l-->
+<!-- End n64 l-->
 
-<!-- nes m -->
+<!-- n64 m -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/m.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(m)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/n64/m.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/n64/logo.png" height=64 width=64> <alph>(m)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -347,13 +347,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes m-->
+<!-- End n64 m-->
 
-<!-- nes n -->
+<!-- n64 n -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/n.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(n)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/n64/n.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/n64/logo.png" height=64 width=64> <alph>(n)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -362,13 +362,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes n-->
+<!-- End n64 n-->
 
-<!-- nes o -->
+<!-- n64 o -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/o.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(o)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/n64/o.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/n64/logo.png" height=64 width=64> <alph>(o)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -377,13 +377,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes o-->
+<!-- End n64 o-->
 
-<!-- nes p -->
+<!-- n64 p -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/p.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(p)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/n64/p.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/n64/logo.png" height=64 width=64> <alph>(p)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -392,13 +392,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes p-->
+<!-- End n64 p-->
 
-<!-- nes q -->
+<!-- n64 q -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/q.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(q)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/n64/q.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/n64/logo.png" height=64 width=64> <alph>(q)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -407,13 +407,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes q-->
+<!-- End n64 q-->
 
-<!-- nes r -->
+<!-- n64 r -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/r.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(r)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/n64/r.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/n64/logo.png" height=64 width=64> <alph>(r)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -422,13 +422,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes r-->
+<!-- End n64 r-->
 
-<!-- nes s -->
+<!-- n64 s -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/s.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(s)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/n64/s.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/n64/logo.png" height=64 width=64> <alph>(s)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -437,13 +437,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes s-->
+<!-- End n64 s-->
 
-<!-- nes t -->
+<!-- n64 t -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/t.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(t)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/n64/t.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/n64/logo.png" height=64 width=64> <alph>(t)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -452,13 +452,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes t-->
+<!-- End n64 t-->
 
-<!-- nes u -->
+<!-- n64 u -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/u.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(u)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/n64/u.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/n64/logo.png" height=64 width=64> <alph>(u)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -467,13 +467,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes u-->
+<!-- End n64 u-->
 
-<!-- nes v -->
+<!-- n64 v -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/v.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(v)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/n64/v.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/n64/logo.png" height=64 width=64> <alph>(v)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -482,13 +482,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes v-->
+<!-- End n64 v-->
 
-<!-- nes w -->
+<!-- n64 w -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/w.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(w)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/n64/w.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/n64/logo.png" height=64 width=64> <alph>(w)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -497,13 +497,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes w-->
+<!-- End n64 w-->
 
-<!-- nes x -->
+<!-- n64 x -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/x.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(x)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/n64/x.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/n64/logo.png" height=64 width=64> <alph>(x)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -512,13 +512,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes x-->
+<!-- End n64 x-->
 
-<!-- nes y -->
+<!-- n64 y -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/y.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(y)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/n64/y.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/n64/logo.png" height=64 width=64> <alph>(y)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -527,13 +527,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes y-->
+<!-- End n64 y-->
 
-<!-- nes z -->
+<!-- n64 z -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/z.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(z)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/n64/z.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/n64/logo.png" height=64 width=64> <alph>(z)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -542,7 +542,7 @@
     </a>
     </ul>
 </li>
-<!-- End nes z-->
+<!-- End n64 z-->
     
  <br></br><br></br></ul>
   </div>
