--- a/pages/wii/wii.html
+++ b/pages/wii/wii.html
@@ -136,14 +136,13 @@
   </svg>
 </a>
 
-<span><img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128></span><button id="combinedButton">🌙</button> </div><ul>
+<span><img src="https://hv-leaf.github.io/Ch3at/ch3ticons/wii/logo.png" height=32 width=80></span><button id="combinedButton">🌙</button> </div><ul>
         <!-- Catalog starts here -->   
-
-<!-- nes # -->
+<!-- wii # -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/09.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(#)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/wii/09.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/wii/logo.png" height=32 width=80> <alph>(#)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -152,14 +151,14 @@
     </a>
     </ul>
 </li>
-<!-- End nes #-->
+<!-- End wii #-->
 
 
-<!-- nes a -->
+<!-- wii a -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/a.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(a)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/wii/a.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/wii/logo.png" height=32 width=80> <alph>(a)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -168,13 +167,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes a-->
+<!-- End wii a-->
 
-<!-- nes b -->
+<!-- wii b -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/b.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(b)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/wii/b.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/wii/logo.png" height=32 width=80> <alph>(b)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -183,13 +182,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes b-->
+<!-- End wii b-->
 
-<!-- nes c -->
+<!-- wii c -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/c.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(c)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/wii/c.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/wii/logo.png" height=32 width=80> <alph>(c)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -198,13 +197,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes c-->
+<!-- End wii c-->
 
-<!-- nes d -->
+<!-- wii d -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/d.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(d)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/wii/d.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/wii/logo.png" height=32 width=80> <alph>(d)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -213,12 +212,12 @@
     </a>
     </ul>
 </li>
-<!-- End nes d-->
-<!-- nes e -->
+<!-- End wii d-->
+<!-- wii e -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/e.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(e)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/wii/e.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/wii/logo.png" height=32 width=80> <alph>(e)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -227,13 +226,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes e-->
+<!-- End wii e-->
 
-<!-- nes f -->
+<!-- wii f -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/f.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(f)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/wii/f.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/wii/logo.png" height=32 width=80> <alph>(f)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -242,13 +241,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes f-->
+<!-- End wii f-->
 
-<!-- nes g -->
+<!-- wii g -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/g.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(g)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/wii/g.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/wii/logo.png" height=32 width=80> <alph>(g)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -257,13 +256,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes g-->
+<!-- End wii g-->
 
-<!-- nes h -->
+<!-- wii h -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/h.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(h)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/wii/h.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/wii/logo.png" height=32 width=80> <alph>(h)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -272,13 +271,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes h-->
+<!-- End wii h-->
 
-<!-- nes i -->
+<!-- wii i -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/i.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(i)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/wii/i.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/wii/logo.png" height=32 width=80> <alph>(i)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -287,13 +286,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes i-->
+<!-- End wii i-->
 
-<!-- nes j -->
+<!-- wii j -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/j.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(j)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/wii/j.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/wii/logo.png" height=32 width=80> <alph>(j)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -302,13 +301,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes j-->
+<!-- End wii j-->
 
-<!-- nes k -->
+<!-- wii k -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/k.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(k)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/wii/k.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/wii/logo.png" height=32 width=80> <alph>(k)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -317,13 +316,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes k-->
+<!-- End wii k-->
 
-<!-- nes l -->
+<!-- wii l -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/l.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(l)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/wii/l.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/wii/logo.png" height=32 width=80> <alph>(l)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -332,13 +331,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes l-->
+<!-- End wii l-->
 
-<!-- nes m -->
+<!-- wii m -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/m.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(m)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/wii/m.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/wii/logo.png" height=32 width=80> <alph>(m)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -347,13 +346,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes m-->
+<!-- End wii m-->
 
-<!-- nes n -->
+<!-- wii n -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/n.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(n)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/wii/n.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/wii/logo.png" height=32 width=80> <alph>(n)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -362,13 +361,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes n-->
+<!-- End wii n-->
 
-<!-- nes o -->
+<!-- wii o -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/o.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(o)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/wii/o.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/wii/logo.png" height=32 width=80> <alph>(o)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -377,13 +376,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes o-->
+<!-- End wii o-->
 
-<!-- nes p -->
+<!-- wii p -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/p.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(p)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/wii/p.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/wii/logo.png" height=32 width=80> <alph>(p)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -392,13 +391,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes p-->
+<!-- End wii p-->
 
-<!-- nes q -->
+<!-- wii q -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/q.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(q)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/wii/q.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/wii/logo.png" height=32 width=80> <alph>(q)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -407,13 +406,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes q-->
+<!-- End wii q-->
 
-<!-- nes r -->
+<!-- wii r -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/r.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(r)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/wii/r.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/wii/logo.png" height=32 width=80> <alph>(r)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -422,13 +421,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes r-->
+<!-- End wii r-->
 
-<!-- nes s -->
+<!-- wii s -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/s.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(s)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/wii/s.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/wii/logo.png" height=32 width=80> <alph>(s)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -437,13 +436,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes s-->
+<!-- End wii s-->
 
-<!-- nes t -->
+<!-- wii t -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/t.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(t)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/wii/t.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/wii/logo.png" height=32 width=80> <alph>(t)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -452,13 +451,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes t-->
+<!-- End wii t-->
 
-<!-- nes u -->
+<!-- wii u -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/u.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(u)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/wii/u.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/wii/logo.png" height=32 width=80> <alph>(u)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -467,13 +466,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes u-->
+<!-- End wii u-->
 
-<!-- nes v -->
+<!-- wii v -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/v.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(v)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/wii/v.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/wii/logo.png" height=32 width=80> <alph>(v)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -482,13 +481,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes v-->
+<!-- End wii v-->
 
-<!-- nes w -->
+<!-- wii w -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/w.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(w)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/wii/w.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/wii/logo.png" height=32 width=80> <alph>(w)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -497,13 +496,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes w-->
+<!-- End wii w-->
 
-<!-- nes x -->
+<!-- wii x -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/x.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(x)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/wii/x.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/wii/logo.png" height=32 width=80> <alph>(x)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -512,13 +511,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes x-->
+<!-- End wii x-->
 
-<!-- nes y -->
+<!-- wii y -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/y.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(y)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/wii/y.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/wii/logo.png" height=32 width=80> <alph>(y)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -527,13 +526,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes y-->
+<!-- End wii y-->
 
-<!-- nes z -->
+<!-- wii z -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/z.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(z)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/wii/z.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/wii/logo.png" height=32 width=80> <alph>(z)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -542,7 +541,7 @@
     </a>
     </ul>
 </li>
-<!-- End nes z-->
+<!-- End wii z-->
     
  <br></br><br></br></ul>
   </div>
